apps/prod/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: forgejo
spec:
  selector:
    app: forgejo
  ports:
  - name: ssh
    port: 2222
    targetPort: 22
  - name: http
    port: 3000
    targetPort: 3000
