apps/prod/forgejo/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPNAME}
  namespace: ${NAMESPACE}
spec:
  parentRefs:
  - name: https-8443
    namespace: gateways
    sectionName: https
  hostnames:
  - "${FORGEJO_HOSTNAME}"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ${APPNAME}
      port: 3000
